# sovereign-monitor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NEWS.md  README.md  SPEC.md  data_sources.yaml  pyproject.toml
.github/workflows/: ci.yml  ingest_macro.yml  ingest_market_news.yml
config/: countries.yaml  feeds.yaml
dashboard_export/: README.md  alerts.csv  index_monthly.csv  market_daily.csv  signals.csv
docs/: methodology.md  model_card.md  stress_events.yaml  surveillance.md
newsletter/: CHECKLIST.md  TEMPLATE.md
newsletter/issue_packs/2026-07-23/: candidate_links.csv  market_summary.csv  what_moved.csv
notebooks/: issue_data_pull.ipynb
public_data/: news_items.parquet  observations.parquet
src/sovereign_monitor/: __init__.py  __main__.py  configuration.py  logging_setup.py  registry.py
src/sovereign_monitor/features/: __init__.py  panel.py  splits.py
src/sovereign_monitor/index/: __init__.py  build.py  chart.py  inputs.py  scaling.py  specification.py
src/sovereign_monitor/ingestion/: __init__.py  base.py  bulk_csv.py  frankfurter.py  fred.py  gdelt.py  http_retry.py  imf_sdmx.py  rss_feeds.py  worldbank.py  yfinance_prices.py
src/sovereign_monitor/schemas/: __init__.py  tables.py
src/sovereign_monitor/signals/: __init__.py  anomalies.py  backtest.py  build.py  regimes.py  series.py
src/sovereign_monitor/storage/: __init__.py  batch_log.py  parquet_store.py  public_export.py  quarantine.py
src/sovereign_monitor/surveillance/: __init__.py  build.py  freshness.py  metrics.py
tests/: __init__.py  conftest.py  test_build_index.py  test_bulk_adapters.py  test_cli.py  test_features.py  test_fred_adapter.py  test_http_retry.py  test_index.py  test_news_adapters.py  test_public_export.py  test_quant_adapters.py  test_registry.py  test_rss_adapter.py  test_signals.py  test_storage.py  test_surveillance.py  test_volume_check.py
tests/fixtures/: adb_news.xml  bloomberg_markets_news.xml  cnbc_markets.xml  frankfurter_usd.json  fred_observations.json  gdelt_artlist_envelope.json  occrp_feed.xml  rbi_press.xml  wb_ids_china.json  wb_wdi_reserves.json
