# pyproject.toml — single source for dependencies and tool configuration (uv-managed).

[project]
name = "sovereign-monitor"
version = "0.1.0"
description = "Open, reproducible monitor of sovereign debt, currency, and bond markets built entirely from free public data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16",
    "pandera>=0.24",
    "feedparser>=6.0",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.scripts]
sovereign-monitor = "sovereign_monitor.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pre-commit>=4.0",
    "pandas-stubs>=2.2",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sovereign_monitor"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"

[[tool.mypy.overrides]]
# feedparser ships no type stubs; treat it as untyped rather than failing the build.
module = ["feedparser"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
