# pyproject.toml — single source for dependencies and tool configuration (uv-managed).

[project]
name = "sovereign-monitor"
version = "0.1.0"
description = "Open, reproducible monitor of sovereign debt, currency, and bond markets built entirely from free public data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16",
    "pandera>=0.24",
    "feedparser>=6.0",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "yfinance>=0.2.40",
    "sdmx1>=2.20",
    "openpyxl>=3.1",
]

[project.scripts]
sovereign-monitor = "sovereign_monitor.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pre-commit>=4.0",
    "pandas-stubs>=2.2",
    "types-pyyaml>=6.0",
]
# Track A only: manual issue pulls run in notebooks/, never imported by the package.
notebooks = [
    "matplotlib>=3.9",
    "yfinance>=0.2.40",
    "nbclient>=0.10",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sovereign_monitor"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Notebooks are exploratory by convention (SPEC: repo structure); don't lint them.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"
# Map modules from the declared package bases so src/…/__main__.py can never be
# mistaken for a top-level __main__ module.
explicit_package_bases = true

[[tool.mypy.overrides]]
# These libraries ship no type stubs; treat them as untyped rather than fail the build.
module = ["feedparser", "yfinance", "sdmx", "sdmx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
